--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:WgPgpBOoM5o=,iv:giUYdRmjUXdmryFLYfj+9z+FXxJO9qCn4k4XnVW34Xs=,tag:xDpMnvHNTGYH6A8LN+oZyg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:uw/VDM9k4NXMnqXJWLA=,iv:R1VolkqtNRTxGj6FpnPYh5UJ6/uHNYBxABJQkM7P/pE=,tag:PzSdfelkA373p94EHQIbhA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:ymoZiEvk6yU=,iv:Ea5Zt2SsHZmHvmxGZdgle9QKgMXwbaPhM6PzFg5Zmm4=,tag:lXAir61u+WWu+iFKCQi2cQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QZAtEF74zfQ/eWEkohw=,iv:LAj7Z7rwFWiFwtgUhz90yV6lUIPyiQJ+b8lL7fj8qiQ=,tag:Zx5vLrvcNq1upTxrobtrYQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1ucnnx5euk9c7wp0lgmepaywjar7my70mu8k86pgvcznruhtk9gzsq5t8t0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4b2c2SDlGQmFQK0xNc0Fl
-            NkM3NVRIQjJaWVVMb2tNN1d1OHFTYkM0d0JvCm1oTzRLQmFEOXYwNGtmbXRhbndy
-            dWNTclV2WlIwa1RpalBma1hRczQ2WTgKLS0tIG9rWDU3Q0ZHOERqaFk4SDVHcUIy
-            R3p3RTI4TlNrQjBMUEN4ZTY2SFVOK0kKyYWMoMZN+/TSuS4qTIYipyMEKpP5h86e
-            V+CEWJPNsj5zXioVDvJrZZSt+sOjS68Ad9N7WWVFbUSnK0M+prU+/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMZVVWZ1g0QzZJQitFUDVM
+            WVBWYnQ0WmQ5WEw4RHU3a25kSCsrSWNMN1hBClRXNHlPRFJvRDZ2OVk4N2ZqYmRw
+            dThoWWxQSXVVaVJHYlM3SmwwK1FVRUEKLS0tIDhTclB4OWVYcEQzR2pMVUtERjha
+            VDEvdG9XdWgvQmdPZjR5TGMrbTRVV0kKChL1b4i5/UP9Y4kNHn71AgNfJIWZG4lR
+            KKxvlOISEPHMO24OYkVLTiROQSjN57s+sHe4Ys7LzYalYnJkhPQRUQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-06T21:52:47Z"
-    mac: ENC[AES256_GCM,data:bgsKyIhFJQBtEkGFRnq7XfphwoCjMXumL1lAHj7o8PfFZZLVySmguNPVUI2DUJEAIPpDRMa63/31V+pyps44cbwVCPADJC3fOizPY/AnIHWvQeyBWDvige5kaHQgmYveOYGaSJA+kTEaBpkH2a51G2bIEhghHKuXE9/xUGudRFs=,iv:9K8tjvL5UYtWSM+Tlp8eA15b8/KRhxrFkEQPJeFW2MU=,tag:HFFDZ7l0jk49xmmy97c8rA==,type:str]
+    lastmodified: "2022-03-07T02:04:49Z"
+    mac: ENC[AES256_GCM,data:CRAFWL376XWAdR0pnYyiPyFyLTUeuX6yHQNl5ie/kZVnKBV8h4fQ1mpPPm9z6Y4YJk0k/xromsTT8M5BPhfgqrOYXBurJdprziFnVmiuwvo0CMW9wtO9Q2G6PSvoWZFHSRZTXw77p2h7h5m70hFX3vQgw0MS6RltQOc78FRuLHE=,iv:mhwjxeQaL6nEspYOu6Dk4gXQ4ffC24wWh68wfswYVZA=,tag:Q5nahknjhprJfLPj7e9r7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
