--- a/provision/ansible/inventory/host_vars/k8s-0.sops.yml
+++ b/provision/ansible/inventory/host_vars/k8s-0.sops.yml
@@ -1,6 +1,6 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:jt4blFU=,iv:XXVvqllTyQww54euYu1769G3upmPlotHZJoD3sX9HH4=,tag:EThjc0Uj2e47eRVjsrbp7Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:BISatCdjJuNsO+rgGA==,iv:FZ3MaxQbz980ZYJTK7Xyg4POJJs0W7+EsukEP4RjeNI=,tag:VrqEb+oZq7hFmjgxoyu/UA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Mh6Y10w=,iv:mT78f9huMgeRTB1gtQv2sYz9p9gWQXd2y+zwlT15R0U=,tag:acnfLQ4hWFswEbufhj7AWg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:BR/zHIHivW8ZwUquVA==,iv:QAE0MFjql7MBfnuqlNVCagm2LqkGBvJpuH4oPwLbX18=,tag:OpOZSleKqSt2bOeJT20rZg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1ucnnx5euk9c7wp0lgmepaywjar7my70mu8k86pgvcznruhtk9gzsq5t8t0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKOGtpblIxV1lWTkZSdjdj
-            S21YVjdnZWloenhPOVVVbFJXSmh6djE5SUJnCm5ydUZtTC9nSUFpTzZqbDY4ektL
-            QWNJOFRIdmlYOWYxZDZhS3E5WkRyM1EKLS0tIHAvRTZHeDBLSCtSb3U1Mm9pKzNV
-            K3I2Y1NSYmJuMGdVbEJ5Sk81NDdvdUUK2s5fg4ELBrVCWVwcH5VCwpoi/aqgvWWR
-            mhv9oPL+ftBwpdMvenfg2owHGZaKpI6qWJkULRWMaxMU+uId3wZ6rg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2bWduWnF0cWEzd2E1THkx
+            bDdEc3dkcFJuTzgydExZVjlLbEE4cDBTdG04CnFWdlh2U0dNbEQ4aVR1SnoyVk15
+            ZHFWbG1NY2V5elgvU0hpdjJzWWxNRzQKLS0tIHBZR2w4Ni9xdWtkQ1paMndBZmpq
+            MnVNOEF2TGtDRXhYVzRrajlPSmsreWMKH6qTBp8kDnIJG38E52kR6+btv3BFU7XO
+            1mjRpqEmRj3jbYoXrMkwQlNgTbctvPHn9bayp5jZoFH0DdFrQP9L7A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-06T21:52:47Z"
-    mac: ENC[AES256_GCM,data:UowmSjpSK4d5IOcgcTiSGzGiFp8ZeveHCMkyEb9+fJDXlkRrOnxCVu/UWNIt4VB4UdTMQHdEuxEJZAmtVmw7aUIVR0kiMNDmzb+wxqOn1ilFY9yV8FRbg3tKzujgU0XcQG4nKN4tiYAJOVu2b56DpL2M4g9PcwPNEE6Yw8oCe2o=,iv:7pMdb8s2kZBtfCyIf8emqpvn4gUKV30a7N28dm4yM+I=,tag:vQFzWv7vnUNCjWQMOqwTdA==,type:str]
+    lastmodified: "2022-03-07T02:04:49Z"
+    mac: ENC[AES256_GCM,data:VHJCavKx7wA1SNBMyK0saq5iK8ud/DO01u/zwRsh4IMHEQq9S8YBjDYdf1cZMSeozDVnXeVbo1z3a/7ytEVKDQiHy5RzE6OqMfId0vzOt0KasTkEXkrUCKl3GShW8Cvyyrvzq6+b4BEp9W64z1wGzUKfjpBqwYv+QrPa7kyTj2M=,iv:e7putRM6JHEbOmeXW5nYAnPuIFu1ljmkcJULJYUUBfI=,tag:rQEtG05v58K9xt27eziWfA==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.7.1
