--- a/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
@@ -6,9 +6,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2YNaaPsUxLePEf6U/NU=,iv:FOClj0t/e2kh4rVs82Tol/N6aDnyG6pLjrwxX4imQCQ=,tag:q5KJ5AI2OObWpEv7QLNRLQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:tEUdM7lt57l0t6F61PTQW4eDop+cjqHxy1t1IJ3bWdLdJKP5pg==,iv:gW33rZMw0H7iMTXn/LXpRbL7bVFRNoJZ/zSRDj+NKcw=,tag:n9rN4tAjDoskO2TY9dHNxg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:A3T+R4OLrtw1s7W3bw==,iv:mAOyji3GK96UM4Sh7tBsl2swf/u/mzigElGJ/8kpoog=,tag:YCd9XYna0k0k2vGPQl8xNw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:JB6I2qbmj1WhFJZQ23Y=,iv:56UupPmZ0eKe0RF8YzEyJ9RMBL9xPMJ9WzeNf/xYq6I=,tag:OMukH8/Y1YY1SFwe0Z1qRQ==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:emanRrU9A7zf/g9unDuAvEd5plG54m2IZeGFhLB3Fuyll0F7jA==,iv:YRbxCAjRLKtiy+llnrbQOsCluswlvQ+5LE8gpl9cluI=,tag:h4+v8RIezu8i2DWkYhULUQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:wrYp3eC39tuiTzTyHQ==,iv:fZnjKzmwSVBmRbrDh6b9C37C2hXzGkYe4LE+vn2+NKc=,tag:0XRONcYMQEWZyqj9fn0MrA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age1ucnnx5euk9c7wp0lgmepaywjar7my70mu8k86pgvcznruhtk9gzsq5t8t0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOK3gxWHd4bmRBUWxaL3NB
-            UGJuSTJKWkJQWjhWckxWNStObVhBRHBpUm53ClhPdEw1TUY5cC9HRWFFQ0J3NlhR
-            aWZIK0d2c2tMcXMwTFlnVjUxTm42VjgKLS0tIEE4alc3dzd5UkU0SlRQcGpVSVJw
-            dUd4cUpDMjVtMWVoKzVNR01PeGdIMzAKkfyzkhVVZzQoXjby7LA2PhfRRSZvvbBX
-            EBk1ToKbfc3dEUelUZOX2UdniM0Nfi6Xmvs0YjDLYAtLYQzWGF8XLw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSVdGWW1rZDB2eEdXS2xN
+            ZWRZZ1FBeGUwNTl4U0NJekJESmhjTFRjdVM4CnZNZi9paHlHanhiaUJ3T0hLQjVu
+            cXd4Tnl6dHBGTWtjSmdtdTMxOGpPbEEKLS0tIFVuQk5YZjlkV2tYZjRiWitvTTQ0
+            aHh3dHV0bjhKMlQ0dU1zWldQSm5kdkUKzqr+G2zuYfB9o8nIAtJE0hlpnj/l+lsW
+            ROlp1U9n2wkAZzdSJxWNc9N0z0FG952hrMbsjXADNDeiYdBUrHA9og==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-06T21:52:47Z"
-    mac: ENC[AES256_GCM,data:0bvQCBvU/t8b11qDVRRLFKfy8baTusNQ4ehH1DxXxM0Aklt2crRfFcIDKnsDvXVqitNwNwUY3BPAn/vsUY4pnuDvJLNX3N4c3f7plXx5SGcMVWcLvFuLxLohbHg9yQrH/EqDp/UlhxGWrBpcaXawwEZYhJRYghHfjClpf3gzzf8=,iv:EGQgFAzC2cX+XCPmTVzBSOGY89tNBy1fqEg/4Wwoey4=,tag:5E09KSUPsau/VLHDOsCQuQ==,type:str]
+    lastmodified: "2022-03-07T02:04:49Z"
+    mac: ENC[AES256_GCM,data:SqOmiQwzA5Dby+NGbNkZL1vPA52RHbX5YhWHTsNPEfQ9yBa4WRtoM1MUmeqU1H4z2+Zu01t4U88+l8hL3dz1trpxbTpfkSDYcsPmdkW8Ku/FDuBN6fFRgPedsJ1cHzzLkyqwqbKkNOFwpX14c3jqRLmiRTOIysKUZbY2xZCYAAY=,iv:OHfXarTPqbx90mRaPzmMFjNaov3BlHPKm2JJtOwVBT8=,tag:zEKbq4MZGf9ZLk0mTx0DvQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
