--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -5,6 +5,8 @@ kubernetes:
       hosts:
         k8s-0:
           ansible_host: 10.0.3.0
+    worker:
+      hosts:
         k8s-1:
           ansible_host: 10.0.3.1
         k8s-2:
