single master intial commit

--- a/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
+++ b/cluster/apps/networking/cloudflare-ddns/secret.sops.yaml
@@ -6,9 +6,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:JB6I2qbmj1WhFJZQ23Y=,iv:56UupPmZ0eKe0RF8YzEyJ9RMBL9xPMJ9WzeNf/xYq6I=,tag:OMukH8/Y1YY1SFwe0Z1qRQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:emanRrU9A7zf/g9unDuAvEd5plG54m2IZeGFhLB3Fuyll0F7jA==,iv:YRbxCAjRLKtiy+llnrbQOsCluswlvQ+5LE8gpl9cluI=,tag:h4+v8RIezu8i2DWkYhULUQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:wrYp3eC39tuiTzTyHQ==,iv:fZnjKzmwSVBmRbrDh6b9C37C2hXzGkYe4LE+vn2+NKc=,tag:0XRONcYMQEWZyqj9fn0MrA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:8edbzg02rBb2F+yazuc=,iv:Ub/nWJkg+WfN3OwPTaNTHexwUZUee3ptwZHWQMLAyKE=,tag:rhjWBIWRTSaW4Om/x6WA+g==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:AyKUTV/LWnGZwpmnrDfi/QZ8O/DvhPeO1IMEoJSK4tbzPjQ0qw==,iv:WQY+zyBMY9MHfFVie++c5R3WGPtO4WclrZdgfmIi6Z8=,tag:Pe6y66JRlFaay3D1T1EAWQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:dDYvj+FIfsidmrpAPw==,iv:LgxOVrZcZckbGBR5cqQvxDwxZx3xEtI8Z+QfiqLjXxE=,tag:pXnclu8gigAuClX51SGKnA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +18,14 @@ sops:
         - recipient: age1ucnnx5euk9c7wp0lgmepaywjar7my70mu8k86pgvcznruhtk9gzsq5t8t0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSVdGWW1rZDB2eEdXS2xN
-            ZWRZZ1FBeGUwNTl4U0NJekJESmhjTFRjdVM4CnZNZi9paHlHanhiaUJ3T0hLQjVu
-            cXd4Tnl6dHBGTWtjSmdtdTMxOGpPbEEKLS0tIFVuQk5YZjlkV2tYZjRiWitvTTQ0
-            aHh3dHV0bjhKMlQ0dU1zWldQSm5kdkUKzqr+G2zuYfB9o8nIAtJE0hlpnj/l+lsW
-            ROlp1U9n2wkAZzdSJxWNc9N0z0FG952hrMbsjXADNDeiYdBUrHA9og==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqUWkwWWdQVFl2eXc1WkFq
+            bkl6eGFaU1BvNUd0aWQ5U0JTc3N6MEpiWTFnCmRJZTBPaUR3aHFJbjlXcW85b09w
+            bDdCSGlYWVMvVHdGaHVURmlFR1BEYlUKLS0tIEYwc3pKamNZNjB3UWNUbTN6eU5j
+            NlVFVHRMeWl2OWJrWWN3eXpvRzg1QnMKzok+L5fAlkmL+QN7khXHDdFxnXQWEnkT
+            zlzc9L94vzGP6Vb3OA0RrXQtRh4CPY1YABjjMJv9DBZtOvj1i4Wcfw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-07T02:04:49Z"
-    mac: ENC[AES256_GCM,data:SqOmiQwzA5Dby+NGbNkZL1vPA52RHbX5YhWHTsNPEfQ9yBa4WRtoM1MUmeqU1H4z2+Zu01t4U88+l8hL3dz1trpxbTpfkSDYcsPmdkW8Ku/FDuBN6fFRgPedsJ1cHzzLkyqwqbKkNOFwpX14c3jqRLmiRTOIysKUZbY2xZCYAAY=,iv:OHfXarTPqbx90mRaPzmMFjNaov3BlHPKm2JJtOwVBT8=,tag:zEKbq4MZGf9ZLk0mTx0DvQ==,type:str]
+    lastmodified: "2022-03-07T03:15:28Z"
+    mac: ENC[AES256_GCM,data:aldslB6EQGsYjlUGO46cbCdkUhGRUwl7u150NI7OSePA0X6Wi5XuoXo57vAFAeZPVwJz9bbY+124E2lIr+307OhSWAH3zxCIpG9GG1Pn9ZloZN6v0gHRCdyaMHv2cj6JA/1Kvm9XFEqJipCBg/xMK1bycvJcPFZhWP10lGtOMQI=,iv:RmpNrac/dVZeRL458s6Bd1fFlmNUoXhpbidlwztWZyU=,tag:B3gm5cnAiFTNUT0hRTHBeA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
