--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:ymoZiEvk6yU=,iv:Ea5Zt2SsHZmHvmxGZdgle9QKgMXwbaPhM6PzFg5Zmm4=,tag:lXAir61u+WWu+iFKCQi2cQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QZAtEF74zfQ/eWEkohw=,iv:LAj7Z7rwFWiFwtgUhz90yV6lUIPyiQJ+b8lL7fj8qiQ=,tag:Zx5vLrvcNq1upTxrobtrYQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:JwM1sAcAZEg=,iv:ObGbv+NdXTdTzhCSaavu/pFkNfLVJFzfk0k5d6t3d74=,tag:A1/zZaiJYak6mpfNHoSLFA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:EThfaC4dNI6ABVnb15Y=,iv:qfAi1NQOcpiOHzYxcpK62ov+rpHgYhQ03UgfUmJi7Ck=,tag:54MsfrUDwNslLsXjep49/A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1ucnnx5euk9c7wp0lgmepaywjar7my70mu8k86pgvcznruhtk9gzsq5t8t0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMZVVWZ1g0QzZJQitFUDVM
-            WVBWYnQ0WmQ5WEw4RHU3a25kSCsrSWNMN1hBClRXNHlPRFJvRDZ2OVk4N2ZqYmRw
-            dThoWWxQSXVVaVJHYlM3SmwwK1FVRUEKLS0tIDhTclB4OWVYcEQzR2pMVUtERjha
-            VDEvdG9XdWgvQmdPZjR5TGMrbTRVV0kKChL1b4i5/UP9Y4kNHn71AgNfJIWZG4lR
-            KKxvlOISEPHMO24OYkVLTiROQSjN57s+sHe4Ys7LzYalYnJkhPQRUQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOV2NJa1RHeU5yZS9SQmRj
+            UGNjRDVwTDFUOWJHYVFKcHZwMHFhMnNTSFRVCjNjM1ZsQ21lSzEzbWp6b2dYc3M1
+            WEUrbjE2MmxMWW1zOW9GQkRXTlhzbWMKLS0tIFhqYlpzOEd0S1FGVlZxdHdSRTBX
+            enM0NVNCYzYvTk9QMDkyZWwyVHpCYjgKSDPM443TwF8ctQhPYnG7JY25xG417e32
+            MlAC/GTNyiMJhsAhsBzGeyolkFOCzdmc6ipgsSAW7LK+Iilw6vyk3g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-03-07T02:04:49Z"
-    mac: ENC[AES256_GCM,data:CRAFWL376XWAdR0pnYyiPyFyLTUeuX6yHQNl5ie/kZVnKBV8h4fQ1mpPPm9z6Y4YJk0k/xromsTT8M5BPhfgqrOYXBurJdprziFnVmiuwvo0CMW9wtO9Q2G6PSvoWZFHSRZTXw77p2h7h5m70hFX3vQgw0MS6RltQOc78FRuLHE=,iv:mhwjxeQaL6nEspYOu6Dk4gXQ4ffC24wWh68wfswYVZA=,tag:Q5nahknjhprJfLPj7e9r7w==,type:str]
+    lastmodified: "2022-03-07T03:15:28Z"
+    mac: ENC[AES256_GCM,data:KQoKBO2GVY7AwQQGiktoSMQqCcf5daDAGlVdmz6GmkVmjZKzq3Hc76RWeQpXs/ktRwyTyM8ls8GauqR6elxCX5gg1fKnoycMDoc+NdrCJIZ0JDlRlSm/oJnr72gCVJ2zUt8AMp1fUz2SyHAvSb1MvsQZrtAfuVA41KFMsxZr7xY=,iv:D+7v6SGM30L12GDwZxzCuSRRBjXEcxQB6h2jfnxRV1M=,tag:3g9N9HdGKaCMVr1H4u5vpA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
